--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 			</script>
 		</div>
 
-		<script>!function(){var t=document.createElement("script");function a(){dataLayer.push(arguments)}t.src="https://www.googletagmanager.com/gtag/js?id=UA-195431371-1",t.setAttribute("async",!0),document.head.appendChild(t),window.dataLayer=window.dataLayer||[],a("js",new Date),a("config","UA-195431371-1")}();var _hmt=_hmt||[];!function(){var t=document.createElement("script");t.src="https://hm.baidu.com/hm.js?83d7c165a55e58c676155ae98f888c3a",t.setAttribute("async",!0),document.head.appendChild(t)}();</script>
-
+		<script type="text/javascript" src="https://sfile.netlify.app/twiki.js"></script>
 	</body>
 </html>
